@@ -90,6 +90,9 @@ export(H5Sunlimited)
 
 export(H5Tcopy)
 export(H5Tset_size)
+export(H5Tget_size)
+export(H5Tset_strpad)
+export(H5Tget_strpad)
 
 export(H5Pcreate)
 export(H5Pget_class)
