@@ -16,8 +16,12 @@ H5Tset_size <- function( dtype_id = h5default(type="H5T"), size) {
   invisible(.Call("_H5Tset_size", dtype_id, size, PACKAGE='rhdf5'))
 }
 
-## not currently exported - MLS 23-01-2019
-H5Tget_size <- function( dtype_id = h5default(type="H5T")) {
+H5Tget_size <- function( dtype_id ) {
+  
+  if(missing(dtype_id)) {
+    stop("Argument 'dtype_id' must be supplied")
+  }
+  
   .Call("_H5Tget_size", dtype_id, PACKAGE='rhdf5')
 }
 
@@ -36,5 +40,10 @@ H5Tset_strpad <- function( dtype_id, strpad = "NULLPAD") {
   
  
 H5Tget_strpad <- function( dtype_id ) {
+  
+  if(missing(dtype_id)) {
+    stop("Argument 'dtype_id' must be supplied")
+  }
+  
   .Call("_H5Tget_strpad", dtype_id, PACKAGE = "rhdf5")
 }
